--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin-left: 1%;
+  left: 0;
+  margin-top: 5%;
+  top: 15%;
 }
 
-.App-link {
-  color: #61dafb;
+.country-button {
+  display: block;
+  width: 15%;
+  margin: 10px 0;
+  padding: 10px;
+  background-color: rgb(247, 164, 164);
+  border: solid;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.country-button:hover {
+  background-color: rgb(253, 249, 249);
+}
+
+.country-button:active {
+  background-color: rgb(204, 204, 204);
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content {
+  width: 45%;
+  max-width: 800px;
+  border-radius: 18px;
+  box-shadow: 15px 0px 15px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  margin-top: 5%;
+}
+
+.con_grad {
+  background: linear-gradient(to bottom, rgb(250, 249, 249), #d4baba);
+}
+
+.grad_table {
+  width: 100%;
+  margin-top: 5%;
+}
+
+.grad_table td,
+.grad_table th {
+  padding: 30px;
+  text-align: left;
+  font-size: 16px;
+  margin-top: 5%;
+}
+
+.grad_table_column {
+  width: 20%;
+  font-weight: bold;
+}
+
+.bg-c2 {
+  background-color: #212020;
+  border-radius: 10%;
+}
+
+.color-white {
+  color: #fff;
 }
