--- a/src/pages/SignIn_SignUp.css
+++ b/src/pages/SignIn_SignUp.css
@@ -26,10 +26,10 @@ body {
   }
   
   h1 {
-    text-decoration: none;
-    color: #ffffff;
-    font-size: px;
-    margin-left: 40%
+    color: #fff;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    letter-spacing: 5px;
+    text-align: center;
   }
   
   button[type="signUp" ] {
@@ -59,3 +59,4 @@ body {
     margin-left: 47%
     
   }
+  
