--- a/src/App.css
+++ b/src/App.css
@@ -23,25 +23,16 @@
   overflow: hidden; /* Add an overflow property */
 }
 
-.con_grad {
-  background: linear-gradient(to right, #296bcd,#00b8d4); /* Add a gradient background */
-  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Add a box shadow */
-  font-size: 25px;
-  margin: 2%;
-  margin-left: 35%;
-  margin-right: 2%;
-  margin-top: 0%;
-
-}
 
 
-.grad_table {
-  border: none; /* Remove the default border */
-  width: 60%; /* Make the table take up the full width of the container */
-  border-collapse: collapse; /* Remove the space between cells */
+
+.container {
+   /* Remove the default border */
+ /* Make the table take up the full width of the container */
+ /* Remove the space between cells */
   font-size: 20px; /* Increase the font size */
   color: #fff; /* Change the text color */
-  margin: 20px 0; /* Add some margin to the table */
+   /* Add some margin to the table */
 }
 
 .grad_table td {
@@ -62,6 +53,11 @@
 
 .grad_table_body {
   width: 65%; /* Make the second column take up the full width */
+}
+html {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 
@@ -106,8 +102,6 @@ button[type="submit" ] {
 }
 
 
-
-
 .flag-image {
   max-width: 150px;
   max-height: 150px;
@@ -115,4 +109,22 @@ button[type="submit" ] {
   margin: 20px auto; /* Center the image */
   border-radius: 60%; /* Add a border radius */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 15px 15px 0 rgba(0, 0, 0, 0.19); /* Add a box shadow */
+}
+.container {
+  position: absolute;
+  left: 30%;
+  top: 15%;
+  margin: 5%;
+  border: 5px solid rgb(255, 255, 255);
+  border-spacing: 2rem;
+  border-radius: 5px;
+  padding: 1rem;
+  color: whitesmoke;
+  opacity: 90%;
+  background: linear-gradient(to right, #296bcd,#00b8d4); /* Add a gradient background */
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Add a box shadow */
+  font-size: 25px;
+  margin: 2%;
+  margin-right: 5%;
+  margin-top: 0%;
 }
