--- a/src/pages/SignIn_SignUp.css
+++ b/src/pages/SignIn_SignUp.css
@@ -45,12 +45,37 @@ body {
     margin: 20px auto;
     border-radius: 3px;
     margin-left: 44%;
-    width: 205px;
-    
+    width: 205px;    
+    cursor: pointer;
+  }
+
+  button:hover[type="signUp" ] {
+    background-color: #6c886e;
   }
   button[type="sign Up1" ] {
     color: #FFF;
-    background-color: #796a6a;
+    background-color: #b7b3b3;
+    border: 0;
+    padding: 7px 30px;
+    font-size: 17px;
+    text-transform: capitalize;
+    height:36px;
+    width: 105%;
+    margin: 20px auto;
+    border-radius: 3px;
+    margin-left: 44.5%;
+    width: 205px;
+    display: block;
+    cursor: pointer;
+    margin-top: -1%;
+    
+  }
+  button:hover[type="sign Up1" ] {
+    background-color: #6c886e;
+  }
+  button[type="sign Up2" ] {
+    color: #FFF;
+    background-color: #b7b3b3;
     border: 0;
     padding: 7px 30px;
     font-size: 17px;
@@ -62,6 +87,12 @@ body {
     margin-left: 44%;
     width: 205px;
     display: block;
+    cursor: pointer;
+    margin-top: -0,5%;
+    
+  }
+  button:hover[type="sign Up2" ] {
+    background-color: #6c886e;
   }
 
   button[type="logIn" ] {
@@ -82,12 +113,41 @@ body {
 
     
   }
-  button:hover {
+  button:hover[type="logIn" ] {
     background-color: #3e8e41;
   }
-
-  h6 {
-    font-size: 17px;
-    margin-left: 44%;
+  
+  
+  .donthaveaaccount  {
+    font-size: 18px;
+  margin-left: 45%;
+  color: white;    
   }
  
+  .donthaveaaccount1  {
+    font-size: 18px;
+  margin-left: 45%;
+  margin-top: 16%;
+  color: white;    
+  }
+  .error-message {
+    font-size: 18px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    position: absolute;
+    top: 80%;
+    left: 51.5%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .errorMessage {
+    font-size: 18px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    position: absolute;
+    top: 80%;
+    left: 52%;
+    transform: translate(-50%, -50%);
+  }
